--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@vimeo/player": "^2.17.0",
+    "lodash.throttle": "^4.1.1",
+    "simplelightbox": "^2.10.3"
+  }
 }
